@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -*- Mode: Latex -*- %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% oprs-kernel.tex -- 
-%% Copyright (c) 1991-2003 Francois Felix Ingrand.
+%% Copyright (c) 1991-2006 Francois Felix Ingrand.
 %% All rights reserved.
 %%
 %% Redistribution and use in source and binary forms, with or without
@@ -1479,13 +1479,27 @@ them, we indicate in parenthesis the C type as defined in
 
 A term can be an \dfn{integer}.  Its C type is then \code{INTEGER}. In the \CPK{},
 integers become C \code{int}. A direct consequence is that they are not
-bignums. Therefore, there are maximum values for these numbers. Check the C
+bignums (a la Lisp_. Therefore, there are maximum values for these numbers. Check the C
 compiler and your machine architecture for specific maximum and minimum
 values.
 
-Example of integers: \code{0 1 -3 4732 +34 -0 +0 -023}. \*
+Example of integers: (the parser will accept a useless l) \code{0 1 -3 4732 +34l -0 +0 -023l}. \*
 Example of numbers which are probably not recognized as integers:
 \code{123123123123123123 --4}.
+
+\subsection{Long long integer as a Term}
+\node{Long long integer as a Term}
+\cpindex{Long long integer as a Term}
+
+A term can be a \dfn{long long integer}, i.e. a 64 bits integer.  Its C type
+is then \code{LONG_LONG}. In the \CPK{}, long long integers become C
+\code{long long int}. You can perform computation on integer larger than the
+``regular'' int. Yet , there is a maximum value (probably 2**(63) - 1). Check the C compiler
+and your machine architecture for specific maximum and minimum values.
+
+Example of integers: \code{0ll 1123ll -345345ll +83453234ll}. \*
+Example of numbers which are probably not recognized as long long integers:
+\code{121231231233123123123123123 --4l}.
 
 \subsection{Float as a Term}
 \node{Float as a Term}
@@ -3325,7 +3339,7 @@ possible, we will specify the number of arguments and the type of the
 To help the reader understand the descriptions for the evaluable predicates
 in the following section, consider the \code{>} (greater than) evaluable predicate:
 
-\begin{typeep}{Evaluable Predicate} {PBoolean} {>} {(INTEGER or FLOAT INTEGER or FLOAT)}
+\begin{typeep}{Evaluable Predicate} {PBoolean} {>} {(LONG_LONG or INTEGER or FLOAT)}
 is the greater than function. It is defined for two terms (subsequent
 terms in the list are ignored). It can compare any numbers (\code{INTEGER} or
 \code{FLOAT}).
@@ -3488,7 +3502,7 @@ Return \code{TRUE} in all other cases.
 
 \begin{typeep}{Evaluable Predicate}{PBoolean}{NUMBERP}{(Any Term)}
 It is defined for one term (subsequent terms in the list are ignored). It
-returns \code{TRUE} if the term is a \code{FLOAT} or an \code{INTEGER}, and 
+returns \code{TRUE} if the term is a \code{FLOAT}, an \code{INTEGER} or a \code{LONG_LONG}, and 
 returns \code{FALSE} otherwise.
 \end{typeep}
 
@@ -3624,22 +3638,27 @@ element.
 To help the reader understand the descriptions for the evaluable functions
 in the following section, consider the \code{+} (plus) evaluable function:
 
-\begin{typeefa}{Evaluable Function}{INTEGER or FLOAT}{+}{({INTEGER or FLOAT}+)}
-is the plus function. It is defined for n terms. It adds any numbers to the
-first argument (\code{INTEGER} or \code{FLOAT}), and returns a term containing
-the result casted according to the passed arguments (if all \code{INTEGER}s
-then \code{INTEGER}, \code{FLOAT} otherwise).
+\begin{typeefa}{Evaluable Function}{INTEGER or FLOAT or
+    LONG_LONG}{+}{({INTEGER or LONG_LONG or FLOAT}+)} is the plus function.
+  It is defined for n terms. It adds any numbers to the first argument
+  (\code{INTEGER} or \code{LONG_LONG} or \code{FLOAT}), and returns a term
+  containing the result casted according to the passed arguments (if all
+  \code{INTEGER}s then \code{INTEGER}, if all \code{INTEGER} or
+  \code{LONG_LONG} then \code{LONG_LONG}, \code{FLOAT} otherwise).
 \end{typeefa}
 
-The \code{INTEGER or FLOAT} before the function name \code{+} is the type
-of the object contained in the \code{Term *} object that is returned by
-this \code{+} function.  The \code{(INTEGER or FLOAT)+} after the function
-name specifies the type of the object contained in the TermList which is
-the argument to the \code{plus} function. In this case, it means at least
-one argument (this is represented with the trailing +), and all the arguments
-must be \code{FLOAT} or \code{INTEGER} \code{Term *}.  \xref{liblist.a library}, for examples of how to access different types of objects
-contained in TermList, as well as \nxref{How to Define your Own Evaluable Functions}, for examples of how to store different types of objects in a
-\code{Term *} that will be returned by evaluable functions.
+The \code{INTEGER or LONG_LONG or FLOAT} before the function name \code{+}
+is the type of the object contained in the \code{Term *} object that is
+returned by this \code{+} function.  The \code{(INTEGER or LONG_LONG or
+  FLOAT)+} after the function name specifies the type of the object
+contained in the TermList which is the argument to the \code{plus} function.
+In this case, it means at least one argument (this is represented with the
+trailing +), and all the arguments must be \code{FLOAT}, \code{LONG_LONG} or
+\code{INTEGER} \code{Term *}.  \xref{liblist.a library}, for examples of how
+to access different types of objects contained in TermList, as well as
+\nxref{How to Define your Own Evaluable Functions}, for examples of how to
+store different types of objects in a \code{Term *} that will be returned by
+evaluable functions.
 
 Evaluable functions can be classified in different sections according to their
 type, or to the type of objects they manipulate/return.
@@ -3651,7 +3670,8 @@ type, or to the type of objects they manipulate/return.
 \cpindex{Arithmetic Evaluable Functions}
 
 These evaluable functions deal with numbers and perform the common arithmetic
-operation.
+operation. All functions taking \code{INTEGER} or \code{FLOAT} also now
+takes \code{LONG_LONG}... and behave as expected with respect to casting.
 
 \begin{typeefa}{Evaluable Function}{INTEGER or FLOAT}{+}{({INTEGER or FLOAT}+)}
 is the plus function. It is defined for n terms. It adds any numbers to the
